# cimgui

./: _cimgui_config.h  cimgui.cpp  cimgui.h  cimgui_impl.h  cimgui_stub.cpp  meson.build
generator/: cimgui_template.cpp  cpp2ffi.lua  generator.lua  generator.sh
generator/output/: definitions.json  definitions.lua  impl_definitions.json  impl_definitions.lua  structs_and_enums.json  structs_and_enums.lua
